--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Onesmus Makori</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+
+
+		<link rel="stylesheet" href="/static/css/style.css">
 		
+		<link rel="stylesheet" href="/static/css/main.css">
+		<link rel="stylesheet" href="/static/css/fontawesome-all.min.css">
+
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome-all.min.css') }}">
+
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/fontawesome-all.min.css') }}">
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 		<img src="{{ url_for('static', filename='assets/images/overlay.png') }}" alt="Image">
+
+		
+
+
 
 
 
@@ -28,22 +37,34 @@
 					<a href="#" class="image avatar"><img src="/static/images/fulls/01.jpg" alt="" /></a>
 					<h1><strong>I am Onesmas Makori</strong>, a skiled software developer<br />
 					and machine learning enthusiast<br />
-				
+
 				</div>
 			</header>
 
+			
+
+
 		<!-- Main -->
 			<div id="main">
+					<div class="top">
+						<ul class="actions">
+							<li><a href="{{ url_for('blog') }}" class="button">Blogs</a></li>
+						</ul>
+				
+						<ul class="actions">
+							<li><a href="#projects" class="button">Projects</a></li>
+						</ul>
+					</div>
+			
 
 				<!-- One -->
-					<section id="one">
+					<section class="top">
 						<header class="major">
 							<h2>Software Developer specialized in Python and mongodb</h2>
 						</header>
 						<p>I create stunning web and mobile applications using modern technologies</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+
+						
 					</section>
 
 				<!-- Two -->
@@ -81,9 +102,7 @@
 								<p>Created an adult website where the admin can upload videos and images.</p>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+					
 					</section>
 
 				<!-- Three -->
@@ -91,6 +110,7 @@
 						<h2>Get In Touch</h2>
   <p>Contact Form.</p>
   <div class="row">
+	
     <div class="col-8 col-12-small">
       <form method="post" action="/">
         <div class="row gtr-uniform gtr-50">
@@ -432,6 +452,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 					</section>
 				-->
+
+			</div>
+
+
+			<div class="blogs">
+				
+
+
+
 
 			</div>
 
